--- a/content/post/2021-05-27-field-theory-approaches-to-out-of-equilibrium-systems/index.Rmd
+++ b/content/post/2021-05-27-field-theory-approaches-to-out-of-equilibrium-systems/index.Rmd
@@ -2,17 +2,16 @@
 title: Field Theory approaches to Out of Equilibrium Systems
 author: Pinaki Bhattacharyya
 date: '2021-05-27'
-slug: field-theory-approaches-to-out-of-equilibrium-systems
 categories:
   - Articles
   - Notes
 tags:
-  - reaction-diffusion
   - doi-peliti
   - field theory
-subtitle: ''
-summary: ''
-authors: []
+  - reaction-diffusion
+authors:
+  - Pinaki Bhattacharyya
+slug: field-theory-approaches-to-out-of-equilibrium-systems
 lastmod: '2021-05-27T18:03:17+05:30'
 featured: no
 disable_jquery: no
@@ -22,21 +21,23 @@ image:
   focal_point: smart
   preview_only: no
   alt_text: An optional description of the image for screen readers.
-projects: []
-math: true
+math: yes
 reading_time: yes
 share: yes
 profile: yes
 commentable: no
 diagram: no
-draft: true
+draft: yes
 ---
 
 We review and extend the formalism introduced by Peliti, that maps a Markov process to a
 path-integral representation. After developing the mapping, we apply it to some illustrative
 examples: the simple decay process, the birth-and-death process, and the Malthus-Verhulst
 process. In the first two cases we show how to obtain the exact probability generating
-function using the path integral $\sum a(x)x^{n}$.
+function using the path integral $\sum a(x)x^{n}$. We review and extend the formalism introduced by Peliti, that maps a Markov process to a path-integral representation. After developing the mapping, we apply it to some illustrative
+examples: the simple decay process, the birth-and-death process, and the Malthus-Verhulst
+process. In the first two cases we show how to obtain the exact probability generating
+function using the path integral
 
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLg--0sBHbqtPqqkauMGvntI2oH4KZqnMb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -45,8 +46,5 @@ function using the path integral $\sum a(x)x^{n}$.
 $\sum a(x)x^{n}$
 
 $$\sum a(x)x^{n}$$
-is it working? ndjndjndfff
-
-ffgfgjfjfjg
-
-dfjdhfjhdjhfbljhjkh
+Cannot parse the YAML metadata in 'content/post/learning-entropy-production-via-neural-networks/index.en.Rmd': Duplicate map key: 'authors'
+Rendering content/post/2021-05-27-field-theory-approaches-to-out-of-equilibrium-systems/index.Rmd... Done.
